# object_detection_and_location_tracking_in_ros

./: LICENSE  README.md
darknet_ros/darknet_ros/launch/: darknet_ros.launch
launch/: object_detection_and_location_tracking.launch
location_msgs/: CMakeLists.txt  package.xml
location_msgs/msg/: MultipleObjectLocation.msg  SingleObjectLocation.msg
location_tracking/: CMakeLists.txt  package.xml
location_tracking/launch/: location_tracking.launch
location_tracking/src/: location_tracking.cpp
